Added dark stylesheet for a dark theme Added some buttons and a slider in OneWireTempSensors to see more of the dark theme

--- a/src/css/themes/variables.ios.styl
+++ b/src/css/themes/variables.ios.styl
@@ -2,6 +2,7 @@
 // --------------------------------------------------
 // Shared Stylus variables go in the common.variables.styl file
 @import 'common.variables'
+@import 'dark.variables'
 
 // iOS only Quasar variables overwrites
 // -----------------------------------------
