--- a/src/css/themes/variables.mat.styl
+++ b/src/css/themes/variables.mat.styl
@@ -2,6 +2,7 @@
 // --------------------------------------------------
 // Shared Stylus variables go in the common.variables.styl file
 @import 'common.variables'
+@import 'dark.variables'
 
 // Material only Quasar variables overwrites
 // -----------------------------------------
