Added more variables for the dark theme. Added some components get a better view of the theme.

--- a/src/css/themes/dark.variables.styl
+++ b/src/css/themes/dark.variables.styl
@@ -1,13 +1,14 @@
 // This stylesheet contains the dark variables used for the dark theme.
 // It overrides the variables in common.variables.styl
-$primary   = #375a7f
-$secondary = #26496e
-$tertiary = white
 
-$body-background = $dark
-$body-color = $tertiary
+$primary   = #1A8AAB
+$dark = #24333D
 
-//$card-separator-color = $dark
+$body-background = #121a1f
+$body-color = white
 
-body > *
-  background-color = #525252
+$layout-aside-background = $dark
+$item-side-color = white
+
+.q-layout-page > *
+ background-color $dark
