--- a/src/css/themes/common.variables.styl
+++ b/src/css/themes/common.variables.styl
@@ -19,7 +19,7 @@ $secondary = #26A69A
 $tertiary  = #555
 
 $neutral   = #E0E1E2
-$positive  = #21BA45
-$negative  = #DB2828
+$positive  = #61AD1A
+$negative  = #DB0023
 $info      = #31CCEC
-$warning   = #F2C037
+$warning   = #E1AC00
