Removed the dark property for all quasar components. Added styling that does the same as the dark property in the app.style stylesheet.

--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -1,1 +1,16 @@
 // app global css
+
+@import './themes/dark.variables'
+
+.q-layout-page > *
+  background-color $block-background
+
+.router-link-active
+  color $info
+
+.q-input-target
+  color $standard-text-color
+
+.q-popover
+  color $standard-text-color
+  background-color $block-background
