--- a/src/css/themes/common.variables.styl
+++ b/src/css/themes/common.variables.styl
@@ -14,12 +14,4 @@
 // It's highly recommended to change the default colors
 // to match your app's branding.
 
-$primary   = #027be3
-$secondary = #26A69A
-$tertiary  = #555
-
-$neutral   = #E0E1E2
-$positive  = #61AD1A
-$negative  = #DB0023
-$info      = #31CCEC
-$warning   = #E1AC00
+@import 'dark.variables'
