--- a/src/css/themes/dark.variables.styl
+++ b/src/css/themes/dark.variables.styl
@@ -3,19 +3,22 @@
 
 $primary = #1a8aab
 $secondary = #027be3
-$dark = #24333d
-text-color = #fffafa
+$tertiary  = #555
+
+$neutral   = #E0E1E2
+$positive  = #61AD1A
+$negative  = #DB0023
+$info      = #31CCEC
+$warning   = #E1AC00
+
+$block-background = #24333d
+$standard-text-color = #fffafa
 
 $body-background = #121a1f
-$body-color = text-color
+$body-color = $standard-text-color
 
-$layout-aside-background = $dark
-$toolbar-background = $dark
-$item-side-color = text-color
-$item-label-color = text-color
-
-.q-layout-page > *
-  background-color $dark
-
-.router-link-active
-  color $info
+$layout-aside-background = $block-background
+$toolbar-background = $block-background
+$item-side-color = $standard-text-color
+$item-label-color = $standard-text-color
+$item-separator-color = rgba(255,255,255,0.32)
