add block modal

--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -2,8 +2,8 @@
 
 @import './themes/dark.variables'
 
-.q-layout-page > *
-  background-color $block-background
+//.q-layout-page > *
+//  background-color $block-background
 
 .router-link-active
   color $info
