--- a/src/css/themes/dark.variables.styl
+++ b/src/css/themes/dark.variables.styl
@@ -18,6 +18,8 @@ $body-background = #121a1f
 $body-color = $standard-text-color
 
 $layout-aside-background = $block-background
+$modal-background = $block-background
+$dimmed-background = rgba(0, 0, 0, 0.6);
 $toolbar-background = $block-background
 $item-side-color = $standard-text-color
 $item-label-color = $standard-text-color
