cleaned up some vars

--- a/src/css/themes/dark.variables.styl
+++ b/src/css/themes/dark.variables.styl
@@ -18,6 +18,7 @@ $cyan = #56B6C2;
 $cyan_bright = #66D9E8;
 $white = #ABB2BF;
 $white_bright = #CFD7E6;
+$white_very = #fffafa;
 
 $primary = $blue;
 $secondary = $magenta;
@@ -29,8 +30,8 @@ $negative  = $red;
 $info      = $blue;
 $warning   = $yellow;
 
-$block-background = #282c34
-$standard-text-color = #fffafa
+$block-background = $dark;
+$standard-text-color = $white_very;
 
 $body-background = $dark_darker;
 $body-color = $standard-text-color;
@@ -41,4 +42,4 @@ $dimmed-background = rgba(0, 0, 0, 0.6);
 $toolbar-background = $block-background;
 $item-side-color = $standard-text-color;
 $item-label-color = $standard-text-color;
-$item-separator-color = rgba(255,255,255,0.32);
+$item-separator-color = rgba(255, 255, 255, 0.32);
