styling of blocks

--- a/src/css/themes/dark.variables.styl
+++ b/src/css/themes/dark.variables.styl
@@ -43,3 +43,7 @@ $toolbar-background = $block-background;
 $item-side-color = $standard-text-color;
 $item-label-color = $standard-text-color;
 $item-separator-color = rgba(255, 255, 255, 0.32);
+
+.bg-dark-bright {
+  background: $dark_bright;
+}
