style item-separator-color

--- a/src/css/themes/dark.variables.styl
+++ b/src/css/themes/dark.variables.styl
@@ -42,7 +42,7 @@ $dimmed-background = rgba(0, 0, 0, 0.6);
 $toolbar-background = $block-background;
 $item-side-color = $standard-text-color;
 $item-label-color = $standard-text-color;
-$item-separator-color = rgba(255, 255, 255, 0.32);
+$item-separator-color = $dark_bright;
 
 .bg-dark-bright {
   background: $dark_bright;
