--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -1,5 +1,5 @@
 // app global css
-
+@import "~quasar-framework/dist/core.variables.styl";
 @import './themes/dark.variables'
 
 .router-link-active
@@ -11,3 +11,5 @@
 .q-popover
   color $standard-text-color
   background-color $block-background
+
+@import "~quasar-framework/dist/quasar.mat.styl";
