add remove dialog

--- a/src/css/themes/dark.variables.styl
+++ b/src/css/themes/dark.variables.styl
@@ -38,6 +38,7 @@ $body-color = $standard-text-color;
 
 $layout-aside-background = $block-background;
 $modal-background = $block-background;
+$modal-body-color = $white_very;
 $dimmed-background = rgba(0, 0, 0, 0.6);
 $toolbar-background = $block-background;
 $item-side-color = $standard-text-color;
