add button for dashboard adding

--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -12,3 +12,10 @@
   color $standard-text-color
   background-color $block-background
 
+.text-dark-bright {
+  color: $white_very;
+}
+
+.bg-dark-bright {
+  background: $dark_bright;
+}
