--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -19,3 +19,16 @@
 .bg-dark-bright {
   background: $dark_bright;
 }
+
+.q-stepper-tab.step-waiting, .q-stepper-step-content {
+  color: $white_very;
+}
+
+.q-stepper, .q-stepper-header {
+  box-shadow: none;
+}
+
+.q-stepper-horizontal .q-stepper-step-inner,
+.q-stepper-tab {
+  padding: 24px 0;
+}
