--- a/src/css/themes/dark.variables.styl
+++ b/src/css/themes/dark.variables.styl
@@ -44,3 +44,6 @@ $toolbar-background = $block-background;
 $item-side-color = $standard-text-color;
 $item-label-color = $standard-text-color;
 $item-separator-color = $dark_bright;
+
+$stepper-divider-color = $white;
+$stepper-label-inactive-color = $dark_bright;
