replace config files

--- a/src/styles/quasar.styl
+++ b/src/styles/quasar.styl
@@ -1,6 +1,6 @@
-// app global css
-@import './themes/dark.variables'
-@import "~quasar-framework/dist/quasar.mat.styl";
+@import './quasar.variables'
+@import '~quasar-styl'
+// @import '~quasar-addon-styl'
 
 .router-link-active
   color $info
