file changes to import quasar

--- a/src/styles/quasar.styl
+++ b/src/styles/quasar.styl
@@ -8,7 +8,7 @@
 .q-input-target
   color $standard-text-color
 
-.q-popover
+.q-menu
   color $standard-text-color
   background-color $block-background
 
@@ -49,12 +49,12 @@
   padding: 16px;
 }
 
-.q-list-header {
+.q-item-label {
   display: flex;
   align-items: center;
 }
 
-.q-list-header .q-btn {
+.q-item-label .q-btn {
   margin-left: auto;
   margin-right: 8px;
 }
