--- a/src/styles/quasar.styl
+++ b/src/styles/quasar.styl
@@ -12,6 +12,10 @@
   color $standard-text-color
   background-color $block-background
 
+.q-page {
+  background: $dark_bright;
+}
+
 .text-dark-bright {
   color: $white_very;
 }
@@ -77,8 +81,7 @@
 .widget-modal {
   width: 800px;
   max-width: 100vw;
-  padding: 10px;
-  display: flex;
+  background: $dark_bright;
 }
 
 .widget-body {
