bring linter online again

--- a/src/styles/quasar.styl
+++ b/src/styles/quasar.styl
@@ -133,3 +133,9 @@
   display: inline-block;
   margin: 0px 10px;
 }
+
+.q-dialog {
+    .q-dialog__inner > div {
+        overflow: visible;
+    }
+}
