--- a/src/styles/quasar.styl
+++ b/src/styles/quasar.styl
@@ -83,9 +83,11 @@
 }
 
 .widget-modal {
-  width: 800px;
+  min-width: 800px;
   max-width: 100vw;
   background: $dark_bright;
+  max-height: 80vh;
+  overflow: auto;
 }
 
 .widget-body {
@@ -135,7 +137,18 @@
 }
 
 .q-dialog {
-    .q-dialog__inner > div {
-        overflow: visible;
-    }
+  .q-dialog__inner > div {
+    overflow: visible;
+  }
+}
+
+.q-scrollarea {
+  height: 100%;
+  width: 100%;
+}
+
+/deep/ .q-scrollarea__thumb {
+  opacity: 0.4;
+  background: white;
+  width: 5px;
 }
