fix background colors in production

--- a/src/styles/quasar.styl
+++ b/src/styles/quasar.styl
@@ -24,6 +24,10 @@
   background: $dark_bright;
 }
 
+.q-card--dark {
+  background: $block-background;
+}
+
 .widget-modal {
   min-width: 800px;
   max-width: 100vw;
@@ -36,6 +40,11 @@
   border-bottom: 1px solid gray;
   cursor: pointer;
   margin-bottom: 5px;
+}
+
+.maximized {
+  width: 100%;
+  height: 100%;
 }
 
 .darkened {
