change cursor above clickable elements

--- a/src/plugins/spark/features/ProcessView/grid.styl
+++ b/src/plugins/spark/features/ProcessView/grid.styl
@@ -19,10 +19,6 @@
   );
 }
 
-.grid-item {
-  position: relative;
-}
-
 .grid-item-coordinates {
   font-size: x-small;
   z-index: 2;
@@ -30,4 +26,8 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+}
+
+.clickable {
+  cursor: pointer;
 }
