color styling; secondary toolbar color

--- a/src/styles/quasar.variables.styl
+++ b/src/styles/quasar.variables.styl
@@ -20,14 +20,13 @@ $white = #ABB2BF;
 $white_bright = #CFD7E6;
 $white_very = #fffafa;
 
-$primary = $blue;
-$secondary = $magenta;
-$tertiary  = $yellow;
+$primary   = $blue;
+$secondary = #337ec4;
+$accent    = #af23cf;
 
-$neutral   = $white;
 $positive  = $green;
 $negative  = $red;
-$info      = $blue;
+$info      = #31CCEC;
 $warning   = $yellow;
 
 $block-background = $dark;
