PoC basic/full widget mode

--- a/src/styles/quasar.styl
+++ b/src/styles/quasar.styl
@@ -36,6 +36,11 @@
   overflow: auto;
 }
 
+.widget-dashboard {
+  background: $dark;
+  overflow: auto;
+}
+
 .editable {
   text-decoration: underline;
   cursor: pointer;
