rework setpoint profile

--- a/src/styles/quasar.styl
+++ b/src/styles/quasar.styl
@@ -33,11 +33,13 @@
   max-width: 100vw;
   background: $dark_bright;
   max-height: 80vh;
-  overflow: auto;
 }
 
 .widget-dashboard {
   background: $dark;
+}
+
+.overflow-auto {
   overflow: auto;
 }
 
