tweak profile graph rendering

--- a/src/styles/quasar.styl
+++ b/src/styles/quasar.styl
@@ -39,10 +39,6 @@
   background: $dark;
 }
 
-.overflow-auto {
-  overflow: auto;
-}
-
 .editable {
   text-decoration: underline;
   cursor: pointer;
@@ -51,6 +47,14 @@
 .maximized {
   width: 100%;
   height: 100%;
+}
+
+.overflow-none {
+  overflow: none;
+}
+
+.overflow-auto {
+  overflow: auto;
 }
 
 .darkened {
