--- a/src/styles/quasar.styl
+++ b/src/styles/quasar.styl
@@ -44,6 +44,11 @@
   cursor: pointer;
 }
 
+.hoverable:hover {
+  background-color: rgba(255, 255, 255, 0.18);
+  cursor: pointer;
+}
+
 .maximized {
   width: 100%;
   height: 100%;
