show selection in step index

--- a/src/styles/quasar.styl
+++ b/src/styles/quasar.styl
@@ -44,6 +44,10 @@
   cursor: pointer;
 }
 
+.bg-selected {
+  background-color: rgba(255, 255, 255, 0.18);
+}
+
 .hoverable:hover {
   background-color: rgba(255, 255, 255, 0.18);
   cursor: pointer;
