--- a/src/styles/quasar.styl
+++ b/src/styles/quasar.styl
@@ -44,8 +44,16 @@
   cursor: pointer;
 }
 
+.editable-field {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.6);
+}
+
 .bg-selected {
   background-color: rgba(255, 255, 255, 0.18);
+}
+
+.pointer {
+  cursor: pointer;
 }
 
 .hoverable:hover {
@@ -94,3 +102,4 @@
 .align-children > div {
   justify-content: start;
 }
+
