fix scrolling issues in small dialogs

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -38,6 +38,7 @@
 .q-dialog__inner--maximized .dialog-toolbar
   position: fixed
   width: 100vw
+  z-index: 100
 
 .editable
   text-decoration: underline
