--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -1,26 +1,22 @@
 @import './quasar.variables.sass'
 
-.router-link-active
-  color $info
-
-.q-input-target
-  color $standard-text-color
-
-.q-menu
-  color $standard-text-color
-  background-color $block-background
-
-.q-page
-  background: $dark_bright
+.text-dark
+  color: $dark
 
 .bg-dark
   background: $dark
 
-  &-bright
-    background: $dark_bright
+.text-dark-bright
+  color: $dark_bright
+
+.bg-dark-bright
+  background: $dark_bright
+
+.q-page
+  background: $dark_bright
 
 .grid-item
-  background: $block-background
+  background: $dark
 
 .widget-modal
   width: 800px
@@ -31,6 +27,7 @@
 
 .widget-dashboard
   background: $dark
+  max-width: 100%
 
 .dialog-content
   height: calc(100% - 50px)
