--- a/src/css/quasar.variables.sass
+++ b/src/css/quasar.variables.sass
@@ -8,7 +8,8 @@ $green_bright : #B5E890
 $yellow : #E5C07B
 $yellow_bright : #FFD68A
 $blue : #4aa0ef
-$blue_bright : #69BBFF
+$blue_bright : #31CCEC
+$blue_dimmed: #337ec4
 $magenta : #C678DD
 $magenta_bright : #E48AFF
 $cyan : #56B6C2
@@ -17,30 +18,16 @@ $white : #ABB2BF
 $white_bright : #CFD7E6
 $white_very : #fffafa
 
-$primary   : $blue
-$secondary : #337ec4
-$accent    : #af23cf
-
-$positive  : $green
-$negative  : $red
-$info      : #31CCEC
-$warning   : $yellow
-
-$block-background : $dark
 $standard-text-color : $white_very
 
 $body-background : $dark_darker
 $body-color : $standard-text-color
 
-$layout-aside-background : $block-background
-$modal-background : $block-background
-$modal-body-color : $white_very
-$dimmed-background : rgba(0, 0, 0, 0.6)
-$toolbar-background : $block-background
-$item-side-color : $standard-text-color
-$item-label-color : $standard-text-color
-$item-separator-color : $dark_bright
-$card-separator-color : $dark_bright
+$primary   : $blue
+$secondary : $blue_dimmed
+$accent    : #af23cf
 
-$stepper-divider-color : $white
-$stepper-label-inactive-color : $dark_bright
+$positive  : $green
+$negative  : $red
+$info      : $blue_bright
+$warning   : $yellow
