Implement layout selector as multiselect

--- a/src/plugins/builder/grid.sass
+++ b/src/plugins/builder/grid.sass
@@ -1,4 +1,4 @@
-@import 'src/css/quasar.variables.sass'
+@import 'src/css/app.sass'
 
 .grid-base
   width: 100%
@@ -17,6 +17,3 @@
   -moz-user-select: none
   -ms-user-select: none
   user-select: none
-
-.clickable
-  cursor: pointer
