--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -52,6 +52,15 @@
   width: 100%
   height: 100%
 
+.full-size
+  width: 100%
+  max-width: 100%
+  height: 100%
+  max-height: 100%
+
+.static
+  position: static !important
+
 .overflow-unset
   overflow: unset
 
@@ -82,3 +91,9 @@ label
 
 .bordered
   border: 1px solid silver
+
+.dev
+  &-border
+    border: 1px solid red
+  &-highlight
+    background-color: rgba(255, 255, 255, 0.18)
