add footer toolbar for notifications

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -83,6 +83,12 @@
     background: white
     width: 5px
 
+.q-header > .q-bar
+  height: 40px
+
+.q-footer > .q-bar
+  height: 30px
+
 .align-children > div
   justify-content: start
 
