--- a/src/css/quasar.variables.sass
+++ b/src/css/quasar.variables.sass
@@ -20,14 +20,15 @@ $white_very : #fffafa
 
 $standard-text-color : $white_very
 
-$body-background : $dark_darker
-$body-color : $standard-text-color
+// $body-background : $dark_darker
+// $body-color : $standard-text-color
 
-$primary   : $blue
-$secondary : $blue_dimmed
-$accent    : #af23cf
+$primary   : lighten(#037CD5, 20%)
+$secondary : #182560
+$accent    : #F2B021
 
 $positive  : $green
 $negative  : $red
 $info      : $blue_bright
 $warning   : $yellow
+$header: $secondary
