--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -1,26 +1,28 @@
 @import './quasar.variables.sass'
+@import 'quasar/src/css/variables.sass'
+@import 'quasar/src/css/core/elevation.sass'
 
 .text-dark
   color: $dark
 
 .bg-dark
-  background: $dark
+  background: #f00 //$dark
 
 .text-dark-bright
   color: $dark_bright
 
 .bg-dark-bright
-  background: $dark_bright
+  background: #0f0// $dark_bright
 
 .widget-modal
   width: 800px
   height: 800px
   max-width: 100vw
   max-height: 100vh
-  background: $dark_bright
+  // background: $dark_bright
 
 .widget-dashboard
-  background: $dark
+  // background: $dark
   max-width: 100%
 
 .dialog-content
@@ -103,3 +105,15 @@ label
     border: 1px solid red
   &-highlight
     background-color: rgba(255, 255, 255, 0.18)
+
+// automatically apply shadows to depth class
+@for $d from 0 to 24
+  .depth-#{$d}
+    @extend .shadow-#{$d}
+
+// lighten on dark ui
+$dark-bg-depth-a: (depth-0: 0, depth-1: 0.05, depth-2: 0.07,  depth-3: 0.08,  depth-4: 0.09,  depth-6: 0.11,  depth-8: 0.12,  depth-12: 0.14,  depth-16: 0.15, depth-24: 0.16)
+.body--dark
+  @each $name, $v in $dark-bg-depth-a
+    .#{$name}
+      background-color: rgba(255,255,255,$v)
