revert to quasar default vars

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -2,17 +2,17 @@
 @import 'quasar/src/css/variables.sass'
 @import 'quasar/src/css/core/elevation.sass'
 
-.text-dark
-  color: $dark
+// .text-dark
+//   color: $dark
 
-.bg-dark
-  background: #f00 //$dark
+// .bg-dark
+//   background: #f00 //$dark
 
-.text-dark-bright
-  color: $dark_bright
+// .text-dark-bright
+//   color: #f0f $dark_bright
 
-.bg-dark-bright
-  background: #0f0// $dark_bright
+// .bg-dark-bright
+//   background: #0f0// $dark_bright
 
 .widget-modal
   width: 800px
