new color pallette for dark ui

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -1,12 +1,12 @@
-@import './quasar.variables.sass'
 @import 'quasar/src/css/variables.sass'
 @import 'quasar/src/css/core/elevation.sass'
+@import './quasar.variables.sass'
 
 // .text-dark
 //   color: $dark
 
 // .bg-dark
-//   background: #f00 //$dark
+//  background: $dark
 
 // .text-dark-bright
 //   color: #f0f $dark_bright
