only add style page button in dev mode

--- a/src/css/quasar.variables.sass
+++ b/src/css/quasar.variables.sass
@@ -121,8 +121,8 @@ $dark      : hsl(215,20,18)
 
 $positive  : shade($green, 6)
 $negative  : shade($red, 6)
-$warning:  shade($orange,6)
-$info      : shade($light-blue, 6)
+$warning :  shade($orange,6)
+$info      : shade($deep-purple, 7)
 
 $red-1: shade($red, 1) !default
 $red-2: shade($red, 2) !default
