--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -1,5 +1,4 @@
-@import 'quasar/src/css/variables.sass'
-@import 'quasar/src/css/core/elevation.sass'
+@import 'quasar/src/css/index.sass'
 @import './quasar.variables.sass'
 
 .card
@@ -31,11 +30,22 @@
   max-width: 100%
 
   &__Dialog
-    height: calc(100% - 50px)
+    height: calc(100% - 51px)
     background-color: $dark
 
   &__Dashboard
-    height: calc(100% - 40px)
+    height: calc(100% - 41px)
+
+.widget
+  &-sm
+    max-width: 400px
+  &-md
+    max-width: 600px
+  &-lg
+    max-width: 800px
+
+.widget-body
+  @extend .q-ma-md, .q-gutter-sm
 
 .editable
   text-decoration: underline
@@ -45,24 +55,30 @@
     border-bottom: 1px solid rgba(255, 255, 255, 0.6)
 
 .bg-selected
-  background-color: rgba(255, 255, 255, 0.18)
+  background-color: $hover
+
+.no-select
+  -webkit-user-select: none
+  -moz-user-select: none
+  -ms-user-select: none
+  user-select: none
 
 .pointer
   cursor: pointer
 
 .hoverable:hover
-  background-color: rgba(255, 255, 255, 0.18)
+  background-color: $hover
   cursor: pointer
 
-.maximized
-  width: 100%
-  height: 100%
+.clickable
+  @extend .depth-1
 
-.full-size
-  width: 100%
-  max-width: 100%
-  height: 100%
-  max-height: 100%
+.clickable:hover
+  background-color: $hover
+  cursor: pointer
+
+.rounded
+  border-radius: 2px
 
 .static
   position: static !important
@@ -95,20 +111,22 @@
 .q-footer > .q-bar
   height: 30px
 
-.align-children > div
-  justify-content: start
-
 label
   cursor: inherit
 
 .bordered
   border: 1px solid silver
 
+.col-break
+  flex-basis: 100%
+  width: 0
+  height: 0
+
 .dev
   &-border
     border: 1px solid red
   &-highlight
-    background-color: rgba(255, 255, 255, 0.18)
+    background-color: $hover
 
 // automatically apply shadows to depth class
 @for $d from 0 to 24
@@ -116,7 +134,7 @@ label
     @extend .shadow-#{$d}
 
 // lighten on dark ui
-$dark-bg-depth-a: (depth-0: 0, depth-1: 0.05, depth-2: 0.07,  depth-3: 0.08,  depth-4: 0.09,  depth-6: 0.11,  depth-8: 0.12,  depth-12: 0.14,  depth-16: 0.15, depth-24: 0.16)
+$dark-bg-depth-a: (depth-0: 0, depth-1: 0.05, depth-2: 0.07, depth-3: 0.08, depth-4: 0.09, depth-6: 0.11, depth-8: 0.12, depth-12: 0.14, depth-16: 0.15, depth-24: 0.16)
 .body--dark
   @each $name, $v in $dark-bg-depth-a
     .#{$name}
