--- a/src/css/quasar.variables.sass
+++ b/src/css/quasar.variables.sass
@@ -108,6 +108,7 @@ $blue-grey : #558299
 $primary   : shade($blue, 6)
 $secondary : shade($cyan, 9)
 $accent    : shade($amber, 6)
+$hover     : rgba(255, 255, 255, 0.18)
 
 // used by dark mode
 $dark-page : hsl(211,20,10)
@@ -121,7 +122,7 @@ $dark      : hsl(215,20,18)
 
 $positive  : shade($green, 6)
 $negative  : shade($red, 6)
-$warning :  shade($orange,6)
+$warning   : shade($orange,6)
 $info      : shade($deep-purple, 7)
 
 $red-1: shade($red, 1) !default
