--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -10,19 +10,18 @@
 
   &__Dashboard
     max-width: 100%
+    position: relative
 
 .toolbar
-  width: 100%
-  min-width: 100%
-  max-width: 100%
-
   &__Dialog
     height: 50px
     min-height: 50px
+    background-color: $secondary
 
   &__Dashboard
     height: 40px
     min-height: 40px
+    position: relative
 
 .content
   width: 100%
@@ -35,6 +34,7 @@
 
   &__Dashboard
     height: calc(100% - 40px)
+    position: relative
 
 .widget
   &-sm
