rename title click event, red close button on hover

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -20,7 +20,7 @@ $widget-border-radius: 4px
   &__Dialog
     height: 40px
     min-height: 40px
-    background-color: $secondary
+    background-color: $blue-grey-9
     color: white
     border-radius: $widget-border-radius $widget-border-radius 0 0
     @extend .q-px-xs
@@ -29,7 +29,7 @@ $widget-border-radius: 4px
     height: 40px
     min-height: 40px
     position: relative
-    color: $deep-purple-3
+    color: $blue-grey-4
     border-radius: $widget-border-radius $widget-border-radius 0 0
     @extend .q-pa-sm
 
