various small styling tweaks

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -125,11 +125,15 @@ $widget-border-radius: 4px
     background: white
     width: 5px
 
-.q-header > .q-bar
-  height: 40px
+.q-header
+  border-bottom: 1px solid rgba(255,255,255,0.1) !important
+  > .q-bar
+    height: 40px
 
-.q-footer > .q-bar
-  height: 30px
+.q-footer
+  border-top: 1px solid rgba(255,255,255,0.1) !important
+  > .q-bar
+    height: 30px
 
 label
   cursor: inherit
