change dialog border

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -10,6 +10,7 @@ $widget-border-radius: 4px
     max-width: 100vw
     max-height: 100vh
     border-radius: $widget-border-radius
+    border: 1px solid $dialog-toolbar-color
 
   &__Dashboard
     max-width: 100%
@@ -20,7 +21,7 @@ $widget-border-radius: 4px
   &__Dialog
     height: 40px
     min-height: 40px
-    background-color: $blue-grey-9
+    background-color: $dialog-toolbar-color
     color: white
     border-radius: $widget-border-radius $widget-border-radius 0 0
     @extend .q-px-xs
