--- a/src/css/quasar.variables.sass
+++ b/src/css/quasar.variables.sass
@@ -410,6 +410,8 @@ $blue-grey-12: shade($blue-grey, 12)
 $blue-grey-13: shade($blue-grey, 13)
 $blue-grey-14: shade($blue-grey, 14)
 
+$dialog-toolbar-color: $blue-grey-8
+
 // $ios-statusbar-height : 20px !default
 
 // $z-fab                : 990 !default
