refactor widgets to mini

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -150,6 +150,8 @@ label
 .dev
   &-border
     border: 1px solid red
+  &-border-2
+    border: 1px dotted yellow
   &-highlight
     background-color: $hover
 
