--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -59,7 +59,7 @@ $widget-border-radius: 4px
     max-width: 800px
 
 .widget-body
-  @extend .q-ma-md, .q-gutter-sm
+  @extend .q-pa-md, .q-gutter-sm
 
 .min-width
   &-xs
