table layout + color dots active comparisons

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -157,6 +157,13 @@ label
   width: 0
   height: 0
 
+.ellipsis-left
+  text-overflow: ellipsis
+  white-space: nowrap
+  overflow: hidden
+  direction: rtl
+  text-align: left
+
 .dev
   &-border
     border: 1px solid red
