show status events during update

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -116,6 +116,9 @@ $widget-border-radius: 4px
 .darkish
   opacity: 0.7
 
+.monospace
+  font-family: "Lucida Console", Monaco, monospace
+
 .q-dialog
   &__inner > div
     overflow: visible
