Simplify quick actions editor

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -101,6 +101,9 @@ $widget-border-radius: 4px
   background-color: $hover
   cursor: pointer
 
+.grabbable
+  cursor: grab
+
 .static
   position: static !important
 
