--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -148,9 +148,9 @@ $widget-border-radius: 4px
     opacity: 0 !important
 
 .page-height
-  // window - top bar - bottom bar
-  height: calc(100vh - 40px - 30px)
-  max-height: calc(100vh - 40px - 30px)
+  // window - top bar - bottom bar - rounding margin
+  height: calc(100vh - 40px - 30px - 2px)
+  max-height: calc(100vh - 40px - 30px - 2px)
 
 label
   cursor: inherit
