--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -158,6 +158,9 @@ label
 .bordered
   border: 1px solid silver
 
+.dashed
+  border: 1px dashed silver
+
 .col-break
   flex-basis: 100%
   width: 0
