Enable zoom and pan for builder components

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -17,6 +17,11 @@ $widget-border-radius: 4px
     position: relative
     border-radius: $widget-border-radius
 
+    &.card__dense.card__no-scroll
+      height: 100vh
+      min-height: 100vh
+      max-height: 100vh
+
 .toolbar
   &__Dialog
     height: 40px
