--- a/src/plugins/builder/grid.sass
+++ b/src/plugins/builder/grid.sass
@@ -1,9 +1,10 @@
 $grid-line: rgba(255, 255, 255, 0.15)
 
-.grid-editable
+.grid-background
   background-image: linear-gradient($grid-line 1px, transparent 1px), linear-gradient(90deg, $grid-line 1px, transparent 1px)
   background-size: 50px 50px, 50px 50px
   background-position: 0 -1px, -1px 0
+  pointer-events: none
 
 .grid-square-text
   font-size: x-small
