Functional implementation of builder toolbar

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -107,6 +107,7 @@ $widget-border-radius: 4px
   cursor: pointer
 
 .grabbable
+  cursor: -webkit-grab
   cursor: grab
 
 .static
@@ -165,6 +166,9 @@ label
 
 .dashed
   border: 1px dashed silver
+
+.rounded
+  border-radius: $widget-border-radius
 
 .col-break
   flex-basis: 100%
