implement tools menu as sidebar

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -87,6 +87,7 @@ $widget-border-radius: 4px
   background-color: $hover
 
 .no-select
+  -webkit-touch-callout: none
   -webkit-user-select: none
   -moz-user-select: none
   -ms-user-select: none
