--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -5,12 +5,22 @@ $widget-border-radius: 4px
 
 .card
   &__Dialog
-    width: 800px
     height: 800px
-    max-width: 100vw
-    max-height: 100vh
     border-radius: $widget-border-radius
     border: 1px solid $dialog-toolbar-color
+
+    &.card__sm
+      min-width: 400px
+      @media screen and ( max-width: 400px )
+        min-width: 100vw
+    &.card__md
+      min-width: 600px
+      @media screen and ( max-width: 600px )
+        min-width: 100vw
+    &.card__lg
+      min-width: 800px
+      @media screen and ( max-width: 800px )
+        min-width: 100vw
 
   &__Dashboard
     max-width: 100%
@@ -54,14 +64,6 @@ $widget-border-radius: 4px
 .card__dense .toolbar__Dialog,
 .card__dense .content__Dialog
   border-radius: 0 0 0 0
-
-.widget
-  &-sm
-    max-width: 400px
-  &-md
-    max-width: 600px
-  &-lg
-    max-width: 800px
 
 .widget-body
   @extend .q-pa-md, .q-gutter-sm
