--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -6,6 +6,7 @@ $widget-border-radius: 4px
 .card
   &__Dialog
     height: 800px
+    max-height: 100%
     border-radius: $widget-border-radius
     border: 1px solid $dialog-toolbar-color
 
@@ -24,6 +25,7 @@ $widget-border-radius: 4px
 
   &__Dashboard
     max-width: 100%
+    max-height: 100%
     position: relative
     border-radius: $widget-border-radius
 
@@ -31,6 +33,9 @@ $widget-border-radius: 4px
       height: 100vh
       min-height: 100vh
       max-height: 100vh
+
+      .content__Dashboard
+        height: calc(100vh - 40px) !important
 
 .toolbar
   &__Dialog
