--- a/src/css/quasar.variables.sass
+++ b/src/css/quasar.variables.sass
@@ -50,12 +50,12 @@
 // $breakpoint-xl-min: map-get($sizes, "xl") !default
 // $breakpoint-xl-max: 9999px !default
 
-$h1: (size: 3rem,    line-height: 3rem,     letter-spacing: normal,    weight: 300)
-$h2: (size: 2.5rem,  line-height: 2.5rem,   letter-spacing: .00735em,  weight: 300)
-$h3: (size: 2rem,    line-height: 2rem,     letter-spacing: .00735em,  weight: 300)
-$h4: (size: 1.5rem,  line-height: 2rem,     letter-spacing: normal,    weight: 300)
-$h5: (size: 1.25rem, line-height: 1.5rem,   letter-spacing: .0125em,   weight: 400)
-$h6: (size: 1rem,    line-height: 1.25rem,  letter-spacing: .025em,    weight: 400)
+$h1: (size: 3rem, line-height: 3rem, letter-spacing: normal, weight: 300)
+$h2: (size: 2.5rem, line-height: 2.5rem, letter-spacing: .00735em, weight: 300)
+$h3: (size: 2rem, line-height: 2rem, letter-spacing: .00735em, weight: 300)
+$h4: (size: 1.5rem, line-height: 2rem, letter-spacing: normal, weight: 300)
+$h5: (size: 1.25rem, line-height: 1.5rem, letter-spacing: .0125em, weight: 400)
+$h6: (size: 1rem, line-height: 1.25rem, letter-spacing: .025em, weight: 400)
 
 // $subtitle1: (size: 1rem,     line-height: 1.75rem,  letter-spacing: .00937em,  weight: 400) !default
 // $subtitle2: (size: .875rem,  line-height: 1.375rem, letter-spacing: .00714em,  weight: 500) !default
@@ -85,45 +85,45 @@ $h6: (size: 1rem,    line-height: 1.25rem,  letter-spacing: .025em,    weight: 4
   @else
     @return darken($c, ($n - 7) / 8 * lightness($c))
 
-$red : #e44e55
-$pink : #e252a6
-$purple : #915adf
-$deep-purple : #5c44d4
-$indigo : #3d60d3
+$red: #e44e55
+$pink: #e252a6
+$purple: #915adf
+$deep-purple: #5c44d4
+$indigo: #3d60d3
 $blue: #48a6fd
-$light-blue : #73c5ff
-$cyan : #56c6d4
-$teal : #33bbad
-$green : #6ece50
-$light-green : #a2ee5b
-$lime : #c4e043
-$yellow : #e4e151
-$amber : #e9c65e
-$orange : #d9871b
-$deep-orange : #dd6a3c
-$brown : #795548
-$grey : #7f8b94
-$blue-grey : #558299
+$light-blue: #73c5ff
+$cyan: #56c6d4
+$teal: #33bbad
+$green: #6ece50
+$light-green: #a2ee5b
+$lime: #c4e043
+$yellow: #e4e151
+$amber: #e9c65e
+$orange: #d9871b
+$deep-orange: #dd6a3c
+$brown: #795548
+$grey: #7f8b94
+$blue-grey: #558299
 
-$primary   : shade($blue, 7)
-$secondary : shade($cyan, 9)
-$accent    : shade($amber, 6)
-$hover     : rgba(255, 255, 255, 0.18)
+$primary: shade($blue, 7)
+$secondary: shade($cyan, 9)
+$accent: shade($amber, 6)
+$hover: rgba(255, 255, 255, 0.18)
 
 // used by dark mode
-$dark-page : hsl(211,20,10)
-$dark      : hsl(215,20,18)
+$dark-page: hsl(211,20,10)
+$dark: hsl(215,20,18)
 
 .bg-dark
-  background: $dark !important
+  background: $dark
 
 .q-dark
-  background: $dark !important
+  background: $dark
 
-$positive  : shade($green, 6)
-$negative  : shade($red, 6)
-$warning   : shade($orange,6)
-$info      : shade($deep-purple, 7)
+$positive: shade($green, 6)
+$negative: shade($red, 6)
+$warning: shade($orange,6)
+$info: shade($deep-purple, 7)
 
 $red-1: shade($red, 1)
 $red-2: shade($red, 2)
