update dependencies; fix breaking changes

--- a/src/css/quasar.variables.sass
+++ b/src/css/quasar.variables.sass
@@ -111,8 +111,8 @@ $accent: shade($amber, 6)
 $hover: rgba(255, 255, 255, 0.18)
 
 // used by dark mode
-$dark-page: hsl(211,20,10)
-$dark: hsl(215,20,18)
+$dark-page: hsl(211deg,20%,10%)
+$dark: hsl(215deg,20%,18%)
 
 .bg-dark
   background: $dark
