--- a/src/plugins/builder/grid.sass
+++ b/src/plugins/builder/grid.sass
@@ -13,3 +13,13 @@ $grid-line: rgba(255, 255, 255, 0.15)
   -moz-user-select: none
   -ms-user-select: none
   user-select: none
+
+.block-status
+  &__Active
+    fill: $positive
+  &__Inactive
+    fill: $warning
+  &__Disabled
+    fill: $grey-6
+  &__Invalid
+    fill: $negative
