neutral notification background color

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -169,7 +169,7 @@ label
   cursor: inherit
 
 .bordered
-  border: 1px solid silver
+  border: 1px solid rgba(255,255,255,0.28)
 
 .dashed
   border: 1px dashed silver
