--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -136,6 +136,9 @@ $widget-border-radius: 4px
   font-family: "Lucida Console", Monaco, monospace
 
 .q-dialog
+  &__backdrop
+    background: rgba(0, 0, 0, 0.9)
+
   &__inner > div
     overflow: visible
 
@@ -210,11 +213,6 @@ label
 @for $d from 1 through 9
   .fade-#{$d}
     opacity: 1-$d/10
-
-// automatically apply shadows to depth class
-@for $d from 0 to 24
-  .depth-#{$d}
-    @extend .shadow-#{$d}
 
 // lighten on dark ui
 $dark-bg-depth-a: (depth-0: 0, depth-1: 0.05, depth-2: 0.07, depth-3: 0.08, depth-4: 0.09, depth-6: 0.11, depth-8: 0.12, depth-12: 0.14, depth-16: 0.15, depth-24: 0.16)
