Disable discovered/system blocks

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -99,6 +99,9 @@ $widget-border-radius: 4px
   -ms-user-select: none
   user-select: none
 
+.not-allowed
+  cursor: not-allowed
+
 .pointer
   cursor: pointer
 
