render web frame part in portal outside SVG

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -4,6 +4,7 @@ $widget-border-radius: 4px
 
 .card
   &__Dialog
+    position: absolute
     height: 800px
     max-height: 100%
     border-radius: $widget-border-radius
