fix zoom listeners; preview dialogs

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -4,9 +4,9 @@ $widget-border-radius: 4px
 
 .card
   &__Dialog
-    position: absolute
     height: 800px
     max-height: 100%
+    position: relative
     border-radius: $widget-border-radius
     border: 1px solid $dialog-toolbar-color
 
