--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -224,3 +224,13 @@ $dark-bg-depth-a: (depth-0: 0, depth-1: 0.05, depth-2: 0.07, depth-3: 0.08, dept
   @each $name, $v in $dark-bg-depth-a
     .#{$name}
       background-color: rgba(255,255,255,$v)
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button
+  -webkit-appearance: none
+  margin: 0
+
+/* Firefox */
+input[type=number]
+  -moz-appearance: textfield
