--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -216,7 +216,7 @@ label
 
 @for $d from 1 through 9
   .fade-#{$d}
-    opacity: 1-$d/10
+    opacity: calc(1 - $d / 10)
 
 // lighten on dark ui
 $dark-bg-depth-a: (depth-0: 0, depth-1: 0.05, depth-2: 0.07, depth-3: 0.08, depth-4: 0.09, depth-6: 0.11, depth-8: 0.12, depth-12: 0.14, depth-16: 0.15, depth-24: 0.16)
